tried to trim everything down and cover only what's on the app specification while maintaining separation of concerns between <QuizDumb> & <Clock>

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,27 @@
   text-align: center;
 }
 
+.Quiz-header {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.QuizComponent {
+  text-align: left;
+  align-items: left;
+  width: 60%;
+  padding: 5px;
+  outline: 5px solid black;
+  margin-top: 50px;
+  float: left;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -20,9 +41,14 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  
   color: white;
 }
+
+/* 
+font-size: calc(10px + 2vmin);
+
+*/
 
 .App-link {
   color: #61dafb;
